--- a/maldina-site/index.html
+++ b/maldina-site/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Your Site — Starter</title>
+  <title>Sweet 17 Debutante Ball</title>
   <meta name="description" content="Simple, fast starter site with custom font support (Maldina)." />
 
   <style>
