--- a/maldina-site/index.html
+++ b/maldina-site/index.html
@@ -7,24 +7,79 @@
   <meta name="description" content="Simple, fast starter site with custom font support (Maldina)." />
 
   <style>
-    @font-face {
-      font-family: 'Maldina';
-      src: url('/fonts/Maldina.woff2') format('woff2'),
-           url('/fonts/Maldina.woff') format('woff');
-      font-weight: 400;
-      font-style: normal;
-      font-display: swap;
-    }
-    :root {
-      --bg: #0b0b10;
-      --card: #14141d;
-      --muted: #a7abb9;
-      --text: #f7f7fb;
-      --accent: #6ee7b7;
-      --accent-2: #60a5fa;
-      --radius: 20px;
-      --shadow: 0 10px 30px rgba(0,0,0,.25);
-    }
+   /* --- Fonts --- */
+@font-face {
+  font-family: 'Maldina';
+  src: url('/fonts/Maldina.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Parisienne';
+  src: url('/fonts/Parisienne.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+/* --- Sweet 17 palette --- */
+:root{
+  --bg:#ffffff;         /* ivory/white */
+  --card:#f7f7f7;       /* soft panel */
+  --text:#1c1c1c;       /* deep charcoal */
+  --muted:#555555;
+  --accent:#d4af37;     /* gold */
+  --accent-2:#c0c0c0;   /* silver */
+  --radius:20px;
+  --shadow:0 10px 30px rgba(0,0,0,.06);
+}
+
+/* --- Base --- */
+body{
+  margin:0; background:var(--bg); color:var(--text);
+  font:16px/1.6 Georgia, 'Times New Roman', Times, serif; /* readable body */
+}
+a{ color:var(--text); }
+.card{
+  background:var(--card);
+  border:1px solid rgba(0,0,0,.06);
+  border-radius:var(--radius);
+  box-shadow:var(--shadow);
+}
+
+/* --- Branding --- */
+.brand{
+  font-family:'Maldina', cursive;
+  font-size:clamp(32px,4vw,54px);
+  color:var(--accent);
+  letter-spacing:.5px;
+}
+h1{
+  font-family:'Maldina', cursive;
+  font-size:clamp(34px,6vw,64px);
+  line-height:1.1;
+  margin:0 0 1rem;
+  color: var(--accent); /* gold color */
+}
+h2, h3{
+  font-family:'Parisienne', cursive; /* elegant accent headings */
+  letter-spacing:.2px;
+}
+.lead{ color:var(--muted); }
+
+/* --- Buttons (gold) --- */
+.btn{
+  display:inline-block; padding:.85rem 1.15rem; border-radius:999px;
+  background:var(--accent); color:#000; font-weight:700;
+  border:1px solid rgba(0,0,0,.08);
+}
+.btn.alt{
+  background:transparent; color:var(--text);
+  border:1px solid rgba(0,0,0,.18);
+}
+
+
     *, *::before, *::after { box-sizing: border-box; }
     html, body { height: 100%; }
     body {
@@ -70,31 +125,33 @@
     </div>
   </header>
 
-  <main class="container hero">
-    <h1>Build something beautiful — fast.</h1>
-    <p class="lead">This starter is ready for a self‑hosted script font. Drop <strong>Maldina.woff2</strong> into <code>/fonts</code>, and the logo above will render with your script style.</p>
-    <div class="cluster" style="margin-top:1rem;">
-      <a class="btn" href="#contact">Get Started</a>
-      <a class="btn" style="background:transparent;color:#f7f7fb;border:1px solid rgba(255,255,255,.2)" href="/services.html">View Services</a>
-    </div>
-  </main>
+<main class="container hero">
+  <h1>Sweet 17 Debutante Ball</h1>
+  <p class="lead">An elegant debutante experience — poised, modern, and unforgettable.</p>
+  <div class="cluster" style="margin-top:1rem;">
+    <a class="btn" href="#contact">Request an Invitation</a>
+    <a class="btn alt" href="/services.html">View Packages</a>
+  </div>
+</main>
 
   <section id="services" class="container">
-    <div class="grid-3">
-      <article class="card" style="padding:1.25rem">
-        <h3>Clean & Lightweight</h3>
-        <p>One HTML file, one CSS block, blazing fast.</p>
-      </article>
-      <article class="card" style="padding:1.25rem">
-        <h3>Font‑Ready</h3>
-        <p>Self‑hosted <em>Maldina</em> wired with <code>@font-face</code>.</p>
-      </article>
-      <article class="card" style="padding:1.25rem">
-        <h3>Responsive</h3>
-        <p>Fluid type and grids on any device.</p>
-      </article>
-    </div>
-  </section>
+  <h1>Our Packages</h1>
+  <div class="grid">
+    <article class="card" style="padding:1.5rem;">
+      <h2>Classic Tier</h2>
+      <p>Etiquette training, one dance, and an elegant promenade dinner.</p>
+    </article>
+    <article class="card" style="padding:1.5rem;">
+      <h2>Signature Tier</h2>
+      <p>Includes Classic plus two dances, limousine ride, and professional photos.</p>
+    </article>
+    <article class="card" style="padding:1.5rem;">
+      <h2>Royal Tier</h2>
+      <p>All Signature perks plus a weekend stay package at Chateau Okanagan.</p>
+    </article>
+  </div>
+</section>
+
 
   <section id="contact" class="container">
     <div class="card" style="padding:1.5rem; text-align:center;">
