--- a/maldina-site/services.html
+++ b/maldina-site/services.html
@@ -19,23 +19,39 @@ section { padding: 3rem 0; }
     margin-bottom: 1.5rem; 
   }
 
-  .grid {
-    display: grid;
-    grid-template-columns: repeat(3, minmax(0, 1fr));
-    gap: 1.25rem;
-  }
-  @media (max-width: 900px) { 
-    .grid { grid-template-columns: 1fr; } 
-  }
+  /* Packages grid */
+.grid{
+  display:grid;
+  grid-template-columns: repeat(2, minmax(0,1fr));
+  gap:1.25rem;
+  max-width: 1000px;      /* keeps rows from stretching too wide */
+  margin: 0 auto;         /* centers the grid */
+}
+@media (max-width: 900px){
+  .grid{ grid-template-columns: 1fr; }
+}
 
-  .card {
-    text-align: center; 
-    padding: 1.5rem; 
-  }
+/* Cards look a bit more elevated */
+.card{
+  text-align: left;       /* body copy easier to read */
+  padding: 1.5rem;
+  background: #fff;
+  border: 1px solid rgba(0,0,0,.06);
+  box-shadow: 0 10px 30px rgba(0,0,0,.06);
+  border-radius: 20px;
+}
 
-  .card .btn { 
-    margin-top: 0.75rem; 
-  }
+/* Buttons */
+.btn{
+  display:inline-block;
+  margin-top:.75rem;
+  padding:.85rem 1.15rem;
+  border-radius:999px;
+  background: var(--accent); color:#000; font-weight:700;
+  border:1px solid rgba(0,0,0,.1);
+}
+
+  
 </style>
 </head>
 <body>
