--- a/maldina-site/services.html
+++ b/maldina-site/services.html
@@ -19,21 +19,20 @@ section { padding: 3rem 0; }
     margin-bottom: 1.5rem; 
   }
 
-  /* Packages grid */
-.grid{
+/* Final Services layout */
+#services .grid{
   display:grid;
   grid-template-columns: repeat(2, minmax(0,1fr));
-  gap:1.25rem;
-  max-width: 1000px;      /* keeps rows from stretching too wide */
-  margin: 0 auto;         /* centers the grid */
+  gap: 1.25rem;
+  max-width: 1000px;
+  margin: 0 auto;   /* centers the grid */
 }
-@media (max-width: 900px){
-  .grid{ grid-template-columns: 1fr; }
+@media (max-width:900px){
+  #services .grid{ grid-template-columns: 1fr; }
 }
 
-/* Cards look a bit more elevated */
-.card{
-  text-align: left;       /* body copy easier to read */
+#services .card{
+  text-align: left;
   padding: 1.5rem;
   background: #fff;
   border: 1px solid rgba(0,0,0,.06);
@@ -41,13 +40,13 @@ section { padding: 3rem 0; }
   border-radius: 20px;
 }
 
-/* Buttons */
-.btn{
+#services .btn{
   display:inline-block;
   margin-top:.75rem;
   padding:.85rem 1.15rem;
   border-radius:999px;
-  background: var(--accent); color:#000; font-weight:700;
+  background: var(--accent);
+  color:#000; font-weight:700;
   border:1px solid rgba(0,0,0,.1);
 }
 
