--- a/maldina-site/services.html
+++ b/maldina-site/services.html
@@ -3,55 +3,63 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Services — Your Site</title>
+  <title>Services — Sweet 17</title>
+
   <style>
-    @font-face { font-family: 'Maldina'; src: url('/fonts/Maldina.woff2') format('woff2'), url('/fonts/Maldina.woff') format('woff'); font-display: swap; }
-    :root{--bg:#0b0b10;--card:#14141d;--muted:#a7abb9;--text:#f7f7fb;--accent:#6ee7b7;--accent-2:#60a5fa;--radius:20px;--shadow:0 10px 30px rgba(0,0,0,.25);} *,*::before,*::after{box-sizing:border-box}
-    body{margin:0;background:var(--bg);color:var(--text);font:16px/1.6 system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,Noto Sans,Helvetica,Arial}
-    a{color:var(--accent-2)} .container{width:min(1100px,92vw);margin:0 auto}
-    .card{background:linear-gradient(180deg,rgba(255,255,255,.04),rgba(255,255,255,.02));border:1px solid rgba(255,255,255,.08);border-radius:var(--radius);box-shadow:var(--shadow)}
-    header.nav{position:sticky;top:0;backdrop-filter:blur(8px)} header .inner{padding:.9rem 0; display:flex;justify-content:space-between;align-items:center;gap:1rem;} .brand{font-family:'Maldina',cursive;font-size:clamp(28px,4vw,40px)}
-    main{padding:3rem 0} .grid{display:grid;grid-template-columns:repeat(3,minmax(0,1fr));gap:1rem} @media(max-width:900px){.grid{grid-template-columns:1fr}}
-section { padding: 3rem 0; }
+    /* Fonts (ttf as you mentioned) */
+    @font-face { font-family: 'Maldina'; src: url('/fonts/Maldina.ttf') format('truetype'); font-display: swap; }
+    @font-face { font-family: 'Parisienne'; src: url('/fonts/Parisienne.ttf') format('truetype'); font-display: swap; }
 
-  #services .header { 
-    text-align: center; 
-    margin-bottom: 1.5rem; 
-  }
+    /* Sweet 17 palette */
+    :root{
+      --bg:#ffffff; --card:#ffffff; --text:#1c1c1c; --muted:#555;
+      --accent:#d4af37; --accent-2:#c0c0c0;
+      --radius:20px; --shadow:0 10px 30px rgba(0,0,0,.06);
+    }
 
-/* Final Services layout */
-#services .grid{
-  display:grid;
-  grid-template-columns: repeat(2, minmax(0,1fr));
-  gap: 1.25rem;
-  max-width: 1000px;
-  margin: 0 auto;   /* centers the grid */
-}
-@media (max-width:900px){
-  #services .grid{ grid-template-columns: 1fr; }
-}
+    *,*::before,*::after{ box-sizing:border-box; }
+    body{ margin:0; background:var(--bg); color:var(--text); font:16px/1.6 Georgia, 'Times New Roman', Times, serif; }
+    a{ color:inherit; text-decoration:none; }
 
-#services .card{
-  text-align: left;
-  padding: 1.5rem;
-  background: #fff;
-  border: 1px solid rgba(0,0,0,.06);
-  box-shadow: 0 10px 30px rgba(0,0,0,.06);
-  border-radius: 20px;
-}
+    .container{ width:min(1100px,92vw); margin:0 auto; }
+    .card{ background:var(--card); border:1px solid rgba(0,0,0,.06); border-radius:var(--radius); box-shadow:var(--shadow); }
 
-#services .btn{
-  display:inline-block;
-  margin-top:.75rem;
-  padding:.85rem 1.15rem;
-  border-radius:999px;
-  background: var(--accent);
-  color:#000; font-weight:700;
-  border:1px solid rgba(0,0,0,.1);
-}
+    /* Header */
+    header.nav{ position:sticky; top:0; background:rgba(255,255,255,.8); backdrop-filter:blur(8px); }
+    header .inner{ padding:.9rem 0; display:flex; justify-content:space-between; align-items:center; gap:1rem; }
+    .brand{ font-family:'Maldina', cursive; font-size:clamp(28px,4vw,40px); color:var(--accent); }
 
-  
-</style>
+    /* Page spacing */
+    main{ padding:3rem 0; }
+    section{ padding:3rem 0; }
+
+    /* Services grid – HIGH SPECIFICITY so it wins */
+    #services .header{ text-align:center; margin-bottom:1.5rem; }
+    #services .grid{
+      display:grid;
+      grid-template-columns:repeat(2, minmax(0,1fr));
+      gap:1.25rem;
+      max-width:1000px;
+      margin:0 auto; /* centers the grid */
+    }
+    @media (max-width:900px){ #services .grid{ grid-template-columns:1fr; } }
+
+    #services .card{
+      text-align:left;
+      padding:1.5rem;
+    }
+    #services h1{ font-family:'Maldina', cursive; color:var(--accent); font-size:clamp(34px,6vw,64px); line-height:1.1; margin:0 0 1rem; }
+    #services h2{ font-family:'Parisienne', cursive; font-size:clamp(22px,3vw,28px); margin:0 0 .5rem; }
+    .lead{ color:var(--muted); }
+
+    /* Buttons */
+    .btn{
+      display:inline-block; margin-top:.75rem; padding:.85rem 1.15rem;
+      border-radius:999px; background:var(--accent); color:#000; font-weight:700;
+      border:1px solid rgba(0,0,0,.1);
+    }
+    .btn.alt{ background:transparent; color:var(--text); border:1px solid rgba(0,0,0,.18); }
+  </style>
 </head>
 <body>
   <header class="nav card">
@@ -66,31 +74,40 @@ section { padding: 3rem 0; }
   </header>
 
   <main class="container">
-  <section id="services" class="container">
-    <div class="header">
-      <h1>Our Packages</h1>
-      <p class="lead">Choose the experience that fits your celebration.</p>
-    </div>
+    <section id="services" class="container">
+      <div class="header">
+        <h1>Our Packages</h1>
+        <p class="lead">Choose the experience that fits your celebration.</p>
+      </div>
 
-    <div class="grid">
-      <article class="card">
-        <h2>Classic Tier</h2>
-        <p>Etiquette training, one dance, and an elegant promenade dinner.</p>
-        <a class="btn" href="mailto:events@sweet17.com?subject=Classic%20Tier%20Inquiry">Book Now</a>
-      </article>
+      <div class="grid">
+        <article class="card">
+          <h2>Classic Tier</h2>
+          <p>Etiquette training, one dance, and an elegant promenade dinner.</p>
+          <a class="btn" href="mailto:events@sweet17.com?subject=Classic%20Tier%20Inquiry">Book Now</a>
+        </article>
 
-      <article class="card">
-        <h2>Signature Tier</h2>
-        <p>Classic + two dances, limousine ride, and professional photos.</p>
-        <a class="btn" href="mailto:events@sweet17.com?subject=Signature%20Tier%20Inquiry">Book Now</a>
-      </article>
+        <article class="card">
+          <h2>Signature Tier</h2>
+          <p>Classic + two dances, limousine ride, and professional photos.</p>
+          <a class="btn" href="mailto:events@sweet17.com?subject=Signature%20Tier%20Inquiry">Book Now</a>
+        </article>
 
-      <article class="card">
-        <h2>Royal Tier</h2>
-        <p>All Signature perks + weekend stay at Chateau Okanagan.</p>
-        <a class="btn" href="mailto:events@sweet17.com?subject=Royal%20Tier%20Inquiry">Book Now</a>
-      </article>
-    </div>
-  </section>
-</main>
+        <article class="card">
+          <h2>Royal Tier</h2>
+          <p>All Signature perks + weekend stay at Chateau Okanagan.</p>
+          <a class="btn" href="mailto:events@sweet17.com?subject=Royal%20Tier%20Inquiry">Book Now</a>
+        </article>
+
+        <article class="card">
+          <h2>Custom Experience</h2>
+          <p>Bespoke choreography, venue styling, and concierge planning tailored to your vision.</p>
+          <a class="btn" href="mailto:events@sweet17.com?subject=Custom%20Experience%20Inquiry">Book Now</a>
+        </article>
+      </div>
+    </section>
+  </main>
+</body>
+</html>
+
 
